@@ -33,13 +33,13 @@ do
 	fi
 
 	dodir /etc/defaults${etc%/*}
-	/bin/mv ${D}${etc} ${D}/etc/defaults${etc}
+	mv ${D}${etc} ${D}/etc/defaults${etc}
 
 	dodir /etc/postinstall
 	cat >> ${D}/etc/postinstall/${PN}.sh <<-_EOF
 		if [ ! -f ${etc} ]
 		then
-		    /bin/cp /etc/defaults${etc} ${etc}
+		    /usr/bin/cp /etc/defaults${etc} ${etc}
 		fi
 		
 		_EOF
